--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
       justify-content: space-between;
       justify-items: center;
       width: 100%;
-      height: 1730px;
+      height: 1446px;
       background: rgba(26, 82, 156, 0.588);
       color: rgba(109, 109, 109, 0.925);
       font-family: 'helvetica';
@@ -619,8 +619,8 @@
             justify-content: space-between;
             justify-items: center;
             width: 100%;
-            height: 600px;
-            background: transparent; 
+            height: 630px;
+            background: rgba(26, 82, 156, 0.588);
             padding: 1rem;
             color: #4b4b4b;
           }
@@ -1616,9 +1616,8 @@ font-size: 19px;
           height: 649px;
           background: #fff;
           border: 0.12rem solid rgba(157, 157, 159, 0.614);
-          border-top-left-radius: 5rem;
-          border-top-right-radius: 5rem;
-          margin-top: 3rem;
+          border-top: 0.13rem solid orangered;
+         
         }
 .VD3i{
  display: grid;
@@ -1869,7 +1868,7 @@ font-size: 19px;
           align-items: center;
           flex-direction: column;
           width: 89.5%; 
-          height: 999px;
+          height: 770px;
           padding: 1rem;
           cursor: pointer;
           background: #fff;  
@@ -1885,8 +1884,8 @@ font-size: 19px;
           align-items: center;
           flex-direction: column;
           width: 89%; 
-          height: 930px;
-          color: #5b5b5bf4; 
+          height: 740px;
+          color: #515151f4; 
           font-family: 'helvetica';
           font-size: 15px; 
           text-align: left; 
@@ -1894,7 +1893,6 @@ font-size: 19px;
           padding: 0.7rem;
           cursor: pointer;
           background: #fff;  
-          margin-top: 3rem;
         }
 
         .LM{
@@ -2682,18 +2680,16 @@ transition: 0.18s ease-in;
               <br>
               By how they are able to carry up a certain dynamic of courage, determination and steadiness in order to live and sometimes achieve is impressive and hope-fueling. 
               <br>
-              They are delivering condensed lessons of learnings to a certain frange of the society and to whom that can benefit from their experiences and motivations. 
-              From diverse and unknown steps of life, disabled people may have to do two or sevaral times more efforts and hope getting opportunities. 
+              They are delivering condensed lessons of learnings not only to people surrounding them but also to the entire society and then those who can benefit from their experiences and motivations will do so. 
+              From diverse and unknown steps of life, disabled people may have to effort two or more time in getting opportunities. 
               <br>
               <br>
-              Over to socially experience few consideration but moslty regular discriminations in the society, living with a disability is a typical path 
-              to learn and teach some chapters of life among others of what it means to be a differently-able person.
-              <figure>
-                <figcaption style="font-family: arial; font-size: 12.5px; color: blue; margin-top: -5px;">Despite Social Bareers, some disabled people never give up</figcation>
-                </figure>
-              <img src="https://www.zupimages.net/up/23/18/huoj.jpg" style="margin-top: -10px; margin-bottom: 20px; width: 45%; height: 230px; border: 0.5px solid #000; padding: 2px; float: left;">
+              Over to socially experience few consideration and moslty regular discriminations, disabled people never give up but offer a typical path 
+              of teaching and learning many lessons of life among others about what it means to be a differently-able person.
+             
+              <img src="https://www.zupimages.net/up/23/18/huoj.jpg" alt="Friends in Wheelchairs" style="margin-top: 15px; margin-right: 15px; margin-bottom: 10px; width: 43%; height: 220px; border: 0.1px solid #8a8a8ada; padding: 2px; float: left; box-shadow: 0 0 9.5px 0.4px rgba(154, 154, 154, 0.897);">
               <br>
-              Disabled people are often unintentionally considered to be a kind of social barometers by whom it can be measured the level of inclusiveness and human consideration given the rise of social bareers. 
+              Why are they often unintentionally considered to be a kind of social barometers by some people ? Because through them it may possible to quantify the level of inclusiveness based on how the society is interacting and accepting them as human-beings. 
               <br>
               <br>
               Through conversations and interactions with the so-called "normal people", people living with disabilities are sometimes able to tell who is very, less or not inclusive-minded.
