--- a/index.html
+++ b/index.html
@@ -691,13 +691,13 @@
             height: 286px;
             background: rgba(252, 215, 1, 0.991);
             margin-top: -1.85px;
-            border-left: 1.23rem solid #a90f45de;
-            border-right: 1.23rem solid #a90f45de;
+            border-left: 1.23rem solid #ba114cde;
+            border-right: 1.23rem solid #ba114cde;
            }
            
 
           .Kontent:hover{
-            border: 0.12rem solid rgba(11, 11, 20, 0.848);
+            border: 0.13rem solid #fff;
             transition: 0.55s ease-in-out;
             border-radius: 0.5rem;
           }
