--- a/index.html
+++ b/index.html
@@ -691,8 +691,8 @@
             height: 286px;
             background: rgba(252, 215, 1, 0.991);
             margin-top: -1.85px;
-            border-left: 1.23rem solid #ba114cde;
-            border-right: 1.23rem solid #ba114cde;
+            border-left: 1.23rem solid #c0124fee;
+            border-right: 1.23rem solid #c0124fee;
            }
            
 
@@ -1408,7 +1408,7 @@ font-size: 20px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  color: #000;
+  color: rgba(18, 47, 86, 0.596);
   background: #fff;
   box-shadow: 0 0 0.3rem 0.25px rgba(13, 13, 13, 0.7);
   border-radius: 0.1rem;
@@ -1426,7 +1426,8 @@ font-size: 20px;
 
 .HPT:hover{
   color: #f5f5f5f6;
-  background: #373737e8;
+  background: #626262e8;
+  border: 0.1px solid #000;
   transition: 0.2s ease-in;
   padding: 5px;
 }
@@ -2964,8 +2965,8 @@ transition: 0.18s ease-in;
 
                     <div class="HPT">
                       We are all human-beings but we don't have the same status. 
-                      We can have the same disease but we do have neither the same doctor nor the same care. 
-                      Nowadays Medical care is trending to be a Money Affair. 
+                      We can have the same disease but we have neither the same doctor nor the same care. 
+                      Nowadays Medical care is Shifting to Money Affair. 
                       But how people with any income or lower income will have access to medical care? 
                       Many of them have to wait in a suffering state or die. 
                     </div>
