--- a/index.html
+++ b/index.html
@@ -2762,7 +2762,7 @@ transition: 0.18s ease-in;
               <div class="CIP">
               <figure>
                 <img src="https://www.zupimages.net/up/22/46/daw5.jpg" alt="Support Teaching">
-                <figcaption style="color: #0932e7f7; font-size: 13.36px; margin-top: -1px; line-height: 17px;">Volunteering Is Helping to Shape And Highlights Some Fundamentals Of Giving Back. In Burkina Faso, A Disabled Person Is Teaching Maths and Computer Science in French</figcaption>
+                <figcaption style="color: #0932e7f7; font-size: 13.36px; margin-top: -1px; line-height: 16.65px;">Volunteering Is Helping to Shape And Highlight Some Great Concepts Including Sharing And Giving Back Spirit. In Burkina Faso, A Disabled Person, As A Volunteer Is Teaching Maths and Computer Science in An Association</figcaption>
                 </figure>
             </div>
             <div class="PiK" style="margin-top: 2rem; font-size: 14.5px;">
