--- a/index.html
+++ b/index.html
@@ -1869,13 +1869,13 @@ font-size: 19px;
           align-items: center;
           flex-direction: column;
           width: 89.5%; 
-          height: 770px;
+          height: 795px;
           padding: 1rem;
           cursor: pointer;
           background: #fff;  
           border-top: transparent;
           border: 0.12rem solid rgba(106, 107, 115, 0.41);
-          
+          margin-top: -0.6rem;
         }
 
         .ViiDe{
@@ -1885,12 +1885,12 @@ font-size: 19px;
           align-items: center;
           flex-direction: column;
           width: 89%; 
-          height: 740px;
-          color: #585858f4; 
+          height: 760px;
+          color: #555555f3; 
           font-family: 'arial';
           font-size: 15px; 
           text-align: left; 
-          line-height: 17px;
+          line-height: 17.4px;
           padding: 0.7rem;
           cursor: pointer;
           background: #fff;  
@@ -1905,6 +1905,7 @@ font-size: 19px;
           padding: 10px; 
           border: 0.12rem solid rgba(7, 151, 254, 0.901); 
           border-radius: 0.5rem;
+          margin-top: 5rem;
         }
 
         .LM:hover{
