--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                  top: 0;
                  position: sticky;
                  box-shadow: 0 8px 0.5rem 1.65px rgba(15, 49, 90, 0.976);
-                 border-bottom: 6px solid gold;
+                 border-bottom: 4px solid rgba(0, 174, 255, 0.973);
           }
 
           .Joint-Point{
@@ -749,18 +749,18 @@ font-size: 15px;
 width: 180px;
 height: 40px;
 padding: 6px;
-border: 0.15rem solid rgba(24, 81, 155, 0.989);
+border: 0.12rem solid rgba(173, 173, 177, 0.437);
             color: #171717c4;
-            background: rgba(176, 181, 207, 0.313);
+            background: rgba(201, 201, 202, 0.437);
 border-radius: 1.5rem;
 font-size: 1.15rem;
-margin-top: -0.9rem;
+margin-top: -1.25rem;
           }
 
           .BA:hover{
             border: 0.12rem solid #050505e6;
-            background: #101010e6;
-            color: #fcfcfc;
+            background: #bc1751fb;
+            color: gold;
             transition: 0.2s ease-in;
           }
 
