--- a/index.html
+++ b/index.html
@@ -184,8 +184,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 8px 0.5rem 1.65px rgba(15, 49, 90, 0.976);
-                 border-bottom: 4px solid rgba(0, 174, 255, 0.973);
+                 border-bottom: 2px solid #f1f1f1;
           }
 
           .Joint-Point{
@@ -1616,9 +1615,7 @@ font-size: 19px;
           width: 89.5%;
           height: 649px;
           background: #fff;
-          border: 0.12rem solid rgba(157, 157, 159, 0.614);
-          border-top: 0.13rem solid orangered;
-         
+          border: 0.12rem solid rgba(157, 157, 159, 0.614);       
         }
 .VD3i{
  display: grid;
@@ -1628,7 +1625,7 @@ font-size: 19px;
           height: 70px;
           font-family: 'helvetica';
           font-size: 2rem;
-          color: rgb(2, 150, 255);
+          color: rgb(2, 120, 255);
           margin-top: 2.90rem;
 
 }
