--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 border-bottom: 2px solid #f1f1f1;
+                 border-bottom: 1.98px solid #03a3fffc;
           }
 
           .Joint-Point{
