--- a/index.html
+++ b/index.html
@@ -2674,7 +2674,7 @@ transition: 0.18s ease-in;
               <div class="ViiDe">
 
                 <h1 style="font-size: 2rem; text-align: left; color: #0290fdea;">What it means to live with a disability ?</h1>
-            <p>Living as a disabled person is like walking on a way of perpetual challenges. Including to be able to transform the negative energy of regular discriminations into a positive, transformative and rational energy for themselves, disabled people are believed by some opinion to be teaching lessons of combativity. 
+            <p>Living as a disabled person is a tough way of perpetual challenges. Including their abilities to transform a negative energy from daily discriminations into a positive, impulsive and rational energy for themselves to achieve, disabled people are believed to be amongst the best people who truly experience combativity. 
               <br>
               <br>
               By how they are able to carry up a certain dynamic of courage, determination and steadiness in order to live and sometimes achieve is impressive and hope-fueling. 
