--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
       justify-items: center;
       width: 100%;
       height: 1446px;
-      background: rgba(26, 82, 156, 0.588);
+      background: -webkit-linear-gradient(rgba(26, 82, 156, 0.588), #fff);
       color: rgba(109, 109, 109, 0.925);
       font-family: 'helvetica';
       font-weight: bold;
@@ -619,7 +619,7 @@
             justify-items: center;
             width: 100%;
             height: 630px;
-            background: rgba(26, 82, 156, 0.588);
+            background: -webkit-linear-gradient(rgba(26, 82, 156, 0.588), #fff);
             padding: 1rem;
             color: #4b4b4b;
           }
@@ -1213,7 +1213,7 @@ opacity: 0.97;
             justify-items: center;
             width: 100%;
             height: 673px;
-            background: rgba(26, 82, 156, 0.588);
+            background: -webkit-linear-gradient(rgba(26, 82, 156, 0.588), #fff);
             padding: 10px;
             margin-top: 0.65rem;
           }
@@ -1598,7 +1598,7 @@ font-size: 19px;
           justify-items: center;
           width: 100%;
           height: 256px;
-          background: rgba(26, 82, 156, 0.588);
+          background: -webkit-linear-gradient(rgba(26, 82, 156, 0.588), rgba(41, 129, 244, 0.308));
           padding: 10px;
           font-size: 1.8rem;
           cursor: pointer;
@@ -1614,8 +1614,9 @@ font-size: 19px;
           row-gap: 1rem;
           width: 89.5%;
           height: 649px;
-          background: #fff;
-          border: 0.12rem solid rgba(157, 157, 159, 0.614);       
+          background: -webkit-linear-gradient(rgba(26, 82, 156, 0.655), #fff);
+          border: 0.12rem solid rgba(157, 157, 159, 0.614);      
+          border-top: 0.15rem solid rgb(235, 239, 244); 
         }
 .VD3i{
  display: grid;
@@ -1625,7 +1626,7 @@ font-size: 19px;
           height: 70px;
           font-family: 'helvetica';
           font-size: 2rem;
-          color: rgb(2, 120, 255);
+          color: rgb(235, 239, 244);
           margin-top: 2.90rem;
 
 }
@@ -3100,7 +3101,7 @@ transition: 0.18s ease-in;
               <div class="footer1">
                 <figure>
                 <img src="https://www.zupimages.net/up/21/49/h8iv.jpg" alt="Champignon Ahuntsic">
-                <figcaption style="font-family: helvetica; font-size: 12px; text-align: left; margin-top: -12px; color: #fff;">A Mushroom [A Temporary Picture]</figcaption>
+                <figcaption style="font-family: helvetica; font-size: 12px; text-align: left; margin-top: -12px; color: #404040f2;">A Mushroom [A Temporary Picture]</figcaption>
                 </figure>
               </div>
             </a>
