--- a/index.html
+++ b/index.html
@@ -1614,9 +1614,11 @@ font-size: 19px;
           row-gap: 1rem;
           width: 89.5%;
           height: 649px;
-          background: -webkit-linear-gradient(rgba(26, 82, 156, 0.655), #fff);
+          background: -webkit-linear-gradient(rgba(26, 82, 156, 0.619), #fff);
           border: 0.12rem solid rgba(157, 157, 159, 0.614);      
-          border-top: 0.15rem solid rgb(235, 239, 244); 
+          border-top: 0.11rem solid rgba(178, 181, 184, 0.956); 
+          border-top-left-radius: 0.19rem; 
+          border-top-right-radius: 0.19rem; 
         }
 .VD3i{
  display: grid;
