--- a/index.html
+++ b/index.html
@@ -1614,11 +1614,9 @@ font-size: 19px;
           row-gap: 1rem;
           width: 89.5%;
           height: 649px;
-          background: -webkit-linear-gradient(rgba(26, 82, 156, 0.619), #fff);
-          border: 0.12rem solid rgba(157, 157, 159, 0.614);      
-          border-top: 0.11rem solid rgba(178, 181, 184, 0.956); 
-          border-top-left-radius: 0.19rem; 
-          border-top-right-radius: 0.19rem; 
+          background: -webkit-linear-gradient(rgba(26, 82, 156, 0.668), #fff);
+          border: 0.12rem solid rgba(140, 140, 141, 0.614);      
+          border-top: 0.1rem solid rgba(79, 79, 79, 0.743);  
         }
 .VD3i{
  display: grid;
@@ -2676,8 +2674,8 @@ transition: 0.18s ease-in;
 
               <div class="ViiDe">
 
-                <h1 style="font-size: 2rem; text-align: left; color: #0290fdea;">What it means to live with a disability ?</h1>
-            <p>Living as a disabled person is a tough way of perpetual challenges. Including their abilities to transform a negative energy from daily discriminations into a positive, impulsive and rational energy for themselves to achieve, disabled people are believed to be amongst the best people who truly experience combativity. 
+                <h1 style="font-size: 2rem; text-align: left; color: #027bfdea;">What it means to live with a disability ?</h1>
+            <p>Living as a disabled person is a tough way of perpetual challenges. Including their abilities to transform a negative energy from daily discriminations into a positive, impulsive and rational energy for themselves to achieve, disabled people are believed to be amongst the best who truly experience what is combativity. 
               <br>
               <br>
               By how they are able to carry up a certain dynamic of courage, determination and steadiness in order to live and sometimes achieve is impressive and hope-fueling. 
