--- a/index.html
+++ b/index.html
@@ -1332,11 +1332,11 @@ font-size: 14px;
 .VerTiWa{
   display: grid;
   grid-template-rows: 1fr;
-  padding: 20.5px;
+  padding: 16px;
   justify-content: center;
   justify-items: center;
   width: 100%;
-  height: 60px;
+  height: 50px;
   font-size: 22px;
 line-height: 14.25px;
 border: 0.14px solid rgba(172, 174, 183, 0.565);
@@ -1357,7 +1357,7 @@ font-size: 20px;
 
 .HPh:hover{
   color: #000;
-  border: 0.15rem solid #000;
+  border: 0.13rem solid #656565f6;
 }
 
 .Vertical-Writing{
