--- a/index.html
+++ b/index.html
@@ -1616,7 +1616,9 @@ font-size: 19px;
           height: 649px;
           background: -webkit-linear-gradient(rgba(26, 82, 156, 0.636), #fff);
           border: 0.12rem solid rgba(140, 140, 141, 0.614);      
-          border-top: 0.1rem solid rgba(28, 41, 57, 0.416);  
+          border-top: transparent;  
+          border-top-right-radius: 2rem;
+          border-top-left-radius: 2rem;
         }
 .VD3i{
  display: grid;
