--- a/index.html
+++ b/index.html
@@ -1642,6 +1642,8 @@ font-size: 19px;
   height: 415px;
   overflow: hidden;
   padding: 15px;
+  border-top-right-radius: 2rem;
+          border-top-left-radius: 2rem;
   
 }
 
@@ -1652,11 +1654,15 @@ font-size: 19px;
   width: 100%;
   height: 415px;
   background: lightblue;
+  border-top-right-radius: 2rem;
+          border-top-left-radius: 2rem;
 }
 
 .VDI img{
   width: 100%;
   height: 415px;
+  border-top-right-radius: 2rem;
+          border-top-left-radius: 2rem;
 }
 
 @keyframes auto{
@@ -1688,11 +1694,15 @@ font-size: 19px;
   animation: auto 12s ease-in infinite;
   animation-delay: 8s;
   background: lightblue;
+  border-top-right-radius: 2rem;
+          border-top-left-radius: 2rem;
 }
 
 .VDII img{
   width: 100%;
   height: 415px;
+  border-top-right-radius: 2rem;
+          border-top-left-radius: 2rem;
 }
 @keyframes auto{
             0% {
@@ -1723,11 +1733,15 @@ font-size: 19px;
   animation: auto 12s ease-in infinite;
   animation-delay: 4s;
   background: lightblue;
+  border-top-right-radius: 2rem;
+          border-top-left-radius: 2rem;
 }
 
 .VDIII img{
   width: 100%;
   height: 415px;
+  border-top-right-radius: 2rem;
+          border-top-left-radius: 2rem;
 }
 @keyframes auto{
             0% {
