--- a/index.html
+++ b/index.html
@@ -1777,6 +1777,8 @@ font-size: 19px;
           font-family: arial;
           font-size: 18px;
           color: #4b4d51df;
+          border-top-left-radius: 1rem;
+          border-top-right-radius: 1rem;
          
         }
 
@@ -1788,6 +1790,8 @@ font-size: 19px;
           animation-delay: 12s;
           background: #fff;
           text-align: center;
+          border-bottom-left-radius: 1rem;
+          border-bottom-right-radius: 1rem;
         }
         @keyframes auto{
             0% {
@@ -1819,6 +1823,8 @@ font-size: 19px;
           animation-delay: 8s;
           background: #fff;
           text-align: center;
+          border-bottom-left-radius: 1rem;
+          border-bottom-right-radius: 1rem;
         }
 
         @keyframes auto{
@@ -1852,6 +1858,8 @@ font-size: 19px;
           animation-delay: 4s;
           background: #fff;
           text-align: center;
+          border-bottom-left-radius: 1rem;
+          border-bottom-right-radius: 1rem;
 
         }
         @keyframes auto{
@@ -1890,6 +1898,9 @@ font-size: 19px;
           border-top: transparent;
           border: 0.12rem solid rgba(106, 107, 115, 0.41);
           margin-top: -0.6rem;
+          border-bottom-left-radius: 1rem;
+          border-bottom-right-radius: 1rem;
+
         }
 
         .ViiDe{
@@ -1908,6 +1919,8 @@ font-size: 19px;
           padding: 0.7rem;
           cursor: pointer;
           background: #fff;  
+          border-bottom-left-radius: 1rem;
+          border-bottom-right-radius: 1rem;
         }
 
         .LM{
