--- a/index.html
+++ b/index.html
@@ -1614,9 +1614,9 @@ font-size: 19px;
           row-gap: 1rem;
           width: 89.5%;
           height: 649px;
-          background: -webkit-linear-gradient(rgba(26, 82, 156, 0.541), #fff);
-          border: 0.12rem solid rgba(140, 140, 141, 0.614);      
-          border-top: transparent;  
+          background: -webkit-linear-gradient(rgba(26, 82, 156, 0.631), #fff);
+          border: 0.1rem solid gold;      
+          border-top: 0.1rem solid gold;  
           border-top-right-radius: 2rem;
           border-top-left-radius: 2rem;
         }
