--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
         justify-content: center;
         justify-items: center;
         width: 100%;
-        height: 1.8rem;
+        height: 1.7rem;
         padding: 0.25rem;
         object-fit: cover;
         font-family: 'georgia';
         font-size: 0.72rem;
         color: gold;
-        background: rgba(26, 82, 156, 0.989);
+        background: rgba(17, 56, 111, 0.92);
     }
 
     .reader{
@@ -690,8 +690,8 @@
             height: 286px;
             background: rgba(252, 215, 1, 0.991);
             margin-top: -1.85px;
-            border-left: 1.23rem solid #c0124fee;
-            border-right: 1.23rem solid #c0124fee;
+            border-left: 1.20rem solid #d31557ee;
+            border-right: 1.20rem solid #d31557ee;
            }
            
 
@@ -1615,10 +1615,11 @@ font-size: 19px;
           width: 89.5%;
           height: 649px;
           background: -webkit-linear-gradient(rgba(27, 84, 160, 0.912), #fff);
-          border: 0.1rem solid gold;      
-          border-top: 0.1rem solid gold;  
-          border-top-right-radius: 2rem;
-          border-top-left-radius: 2rem;
+          border: 0.1rem solid rgba(255, 217, 0, 0.888);      
+          border-top: 0.1rem solid rgba(255, 217, 0, 0.888);  
+          border-top-left-radius: 0.57rem;
+          border-top-right-radius: 0.57rem;
+          margin-top: 3.4rem;
         }
 .VD3i{
  display: grid;
@@ -1641,10 +1642,7 @@ font-size: 19px;
   width: 81%;
   height: 415px;
   overflow: hidden;
-  padding: 15px;
-  border-top-right-radius: 2rem;
-          border-top-left-radius: 2rem;
-  
+  padding: 15px;  
 }
 
 .VDI{
@@ -1654,15 +1652,11 @@ font-size: 19px;
   width: 100%;
   height: 415px;
   background: lightblue;
-  border-top-right-radius: 2rem;
-          border-top-left-radius: 2rem;
 }
 
 .VDI img{
   width: 100%;
   height: 415px;
-  border-top-right-radius: 2rem;
-          border-top-left-radius: 2rem;
 }
 
 @keyframes auto{
@@ -1694,15 +1688,11 @@ font-size: 19px;
   animation: auto 12s ease-in infinite;
   animation-delay: 8s;
   background: lightblue;
-  border-top-right-radius: 2rem;
-          border-top-left-radius: 2rem;
 }
 
 .VDII img{
   width: 100%;
   height: 415px;
-  border-top-right-radius: 2rem;
-          border-top-left-radius: 2rem;
 }
 @keyframes auto{
             0% {
@@ -1733,15 +1723,11 @@ font-size: 19px;
   animation: auto 12s ease-in infinite;
   animation-delay: 4s;
   background: lightblue;
-  border-top-right-radius: 2rem;
-          border-top-left-radius: 2rem;
 }
 
 .VDIII img{
   width: 100%;
   height: 415px;
-  border-top-right-radius: 2rem;
-          border-top-left-radius: 2rem;
 }
 @keyframes auto{
             0% {
@@ -2177,18 +2163,18 @@ transition: 0.18s ease-in;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 58px;
-    height: 55px;
+    width: 59px;
+    height: 57px;
     border-radius: 50%;
     color: yellow;
     font-family: 'arial narrow';
     font-size: 13px;
     padding: 2px;
-    background: rgb(250, 63, 1);
-    margin-top: -17.85px;
+    background: #cc1656ee;
+    margin-top: -16px;
     margin-left: 4rem;
     cursor: pointer;
-    border: 0.12rem solid rgba(21, 81, 137, 0.835);
+    border: 0.13rem solid rgba(116, 116, 116, 0.606);
     
    }
 
