--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         font-family: 'georgia';
         font-size: 0.72rem;
         color: gold;
-        background: rgba(15, 48, 96, 0.92);
+        background: rgba(23, 77, 159, 0.891);
     }
 
     .reader{
@@ -340,7 +340,7 @@
       justify-items: center;
       width: 100%;
       height: 1446px;
-      background: -webkit-linear-gradient(rgba(26, 82, 156, 0.675), #fff);
+      background: -webkit-linear-gradient(rgba(34, 105, 199, 0.59), #fff);
       color: rgba(109, 109, 109, 0.925);
       font-family: 'helvetica';
       font-weight: bold;
@@ -418,7 +418,7 @@
     
     }
     ::-webkit-scrollbar-track-piece{
-        background: rgba(22, 77, 149, 0.982);
+        background: rgba(23, 77, 159, 0.876);
         cursor: pointer;
   
     }
@@ -619,7 +619,7 @@
             justify-items: center;
             width: 100%;
             height: 630px;
-            background: -webkit-linear-gradient(rgba(26, 82, 156, 0.588), #fff);
+            background: -webkit-linear-gradient(rgba(34, 105, 199, 0.59), #fff);
             padding: 1rem;
             color: #4b4b4b;
           }
@@ -1213,7 +1213,7 @@ opacity: 0.97;
             justify-items: center;
             width: 100%;
             height: 673px;
-            background: -webkit-linear-gradient(rgba(26, 82, 156, 0.588), #fff);
+            background: -webkit-linear-gradient(rgba(34, 105, 199, 0.59), #fff);
             padding: 10px;
             margin-top: 0.65rem;
           }
@@ -1598,7 +1598,7 @@ font-size: 19px;
           justify-items: center;
           width: 100%;
           height: 256px;
-          background: -webkit-linear-gradient(rgba(26, 82, 156, 0.588), rgba(41, 129, 244, 0.308));
+          background: -webkit-linear-gradient(rgba(34, 105, 199, 0.59), rgba(56, 141, 252, 0.544));
           padding: 10px;
           font-size: 1.8rem;
           cursor: pointer;
@@ -1615,11 +1615,11 @@ font-size: 19px;
           width: 89.5%;
           height: 649px;
           background: -webkit-linear-gradient(rgba(27, 84, 160, 0.912), #fff);
-          border: 0.1rem solid rgba(255, 217, 0, 0.888);      
-          border-top: 0.1rem solid rgba(255, 217, 0, 0.888);  
+          border: 0.1px solid gold;      
+          border-top: 0.1px solid gold;  
           border-top-left-radius: 0.57rem;
           border-top-right-radius: 0.57rem;
-          margin-top: 0.5rem;
+          margin-top: -0.1rem;
         }
 .VD3i{
  display: grid;
@@ -2170,11 +2170,11 @@ transition: 0.18s ease-in;
     font-family: 'arial narrow';
     font-size: 13px;
     padding: 2px;
-    background: #cc1656ee;
+    background: #cf1c5bf2;
     margin-top: -16px;
     margin-left: 4rem;
     cursor: pointer;
-    border: 0.13rem solid rgba(116, 116, 116, 0.606);
+    border: 0.12rem solid rgba(69, 69, 69, 0.899);
     
    }
 
