--- a/index.html
+++ b/index.html
@@ -1612,11 +1612,11 @@ font-size: 19px;
           justify-content: space-around;
           justify-items: center;
           row-gap: 1rem;
-          width: 89.5%;
+          width: 89.54%;
           height: 649px;
           background: -webkit-linear-gradient(rgba(27, 84, 160, 0.912), #fff);
           border: 0.1px solid gold;      
-          border-top: 0.1px solid gold;  
+          border-top: 0.12px solid gold;  
           border-top-left-radius: 0.57rem;
           border-top-right-radius: 0.57rem;
           margin-top: -0.1rem;
@@ -1643,6 +1643,8 @@ font-size: 19px;
   height: 415px;
   overflow: hidden;
   padding: 15px;  
+  border: 1.11px solid #7e7e7eed;
+  border-radius: 0.1rem;
 }
 
 .VDI{
@@ -1876,7 +1878,7 @@ font-size: 19px;
           justify-content: center;
           align-items: center;
           flex-direction: column;
-          width: 89.5%; 
+          width: 89.54%; 
           height: 795px;
           padding: 1rem;
           cursor: pointer;
