--- a/index.html
+++ b/index.html
@@ -2692,10 +2692,10 @@ transition: 0.18s ease-in;
               <div class="ViiDe">
 
                 <h1 style="font-size: 2rem; text-align: left; color: #027bfdea;">What it means to live with a disability ?</h1>
-            <p>Living as a disabled person is a tough way of perpetual challenges. Including their abilities to transform a negative energy from daily discriminations into a positive, impulsive and rational energy for themselves to achieve, disabled people are believed to be amongst the best who truly experience what is combativity. 
+            <p>Living as a disabled person is a tough way to expereinces perpetual challenges. Including the ability to transform a negative energy from daily discriminations into a positive, impulsive and rational one for their survivial, some disabled are believed to be amongst the best people who truly experience what combativity is meaning. 
               <br>
               <br>
-              By how they are able to carry up a certain dynamic of courage, determination and steadiness in order to live and sometimes achieve is impressive and hope-fueling. 
+              By how they are toddly able to carry up a certain dynamic of courage, determination and steadiness in order to reach their focuses, is impressing, inspiring and hope-making. 
               <br>
               They are delivering condensed lessons of learnings not only to people surrounding them but also to the entire society and then those who can benefit from their experiences and motivations will do so. 
               From diverse and unknown steps of life, disabled people may have to effort two or more time in getting opportunities. 
