--- a/index.html
+++ b/index.html
@@ -2692,7 +2692,7 @@ transition: 0.18s ease-in;
               <div class="ViiDe">
 
                 <h1 style="font-size: 2rem; text-align: left; color: #027bfdea;">What it means to live with a disability ?</h1>
-            <p>Living as a disabled person is a tough way to expereinces perpetual challenges. Including the ability to transform a negative energy from daily discriminations into a positive, impulsive and rational one for their survival, some disabled are believed to be amongst the best people who truly experience what combativity is meaning. 
+            <p>Living as a disabled person is a tough way to experience perpetual challenges. Including the ability to transform a negative energy from daily discriminations into a positive, impulsive and rational one for their survival, some disabled are believed to be amongst the best people who truly experience what combativity is meaning. 
               <br>
               <br>
               By the fact that they are able to carry up a certain dynamic of courage, determination and steadiness in order to reach their focuses, is impressing, inspiring and hope-making. 
