--- a/index.html
+++ b/index.html
@@ -1880,7 +1880,7 @@ font-size: 19px;
           flex-direction: column;
           width: 89.54%; 
           height: 795px;
-          padding: 1rem;
+          padding: 0.5rem;
           cursor: pointer;
           background: #fff;  
           border-top: transparent;
@@ -1898,13 +1898,13 @@ font-size: 19px;
           align-items: center;
           flex-direction: column;
           width: 89%; 
-          height: 760px;
-          color: #555555f3; 
-          font-family: 'arial';
-          font-size: 15px; 
+          height: 770px;
+          color: #6f6f6ff6; 
+          font-family: 'trebuchet ms';
+          font-size: 15.56px; 
           text-align: left; 
-          line-height: 17.4px;
-          padding: 0.7rem;
+          line-height: 18px;
+          padding: 0.5rem;
           cursor: pointer;
           background: #fff;  
           border-bottom-left-radius: 1rem;
@@ -2695,7 +2695,7 @@ transition: 0.18s ease-in;
             <p>Living as a disabled person is a tough way to experience perpetual challenges. Including the ability to transform a negative energy from daily discriminations into a positive, impulsive and rational one for their survival, some disabled are believed to be amongst the best people who truly experience what combativity is meaning. 
               <br>
               <br>
-              By the fact that they are able to carry up a certain dynamic of courage, determination and steadiness in order to reach their focuses, is impressing, inspiring and hope-making. 
+              By the fact they are able to carry up a certain dynamic of courage, determination and steadiness in order to reach their focuses, is impressing, inspiring and hope-making. 
               <br>
               They are delivering condensed lessons of learnings not only to people surrounding them but also to the entire society and then those who can benefit from their experiences and motivations will do so. 
               From diverse and unknown steps of life, disabled people may have to effort two or more time in getting opportunities. 
@@ -2706,10 +2706,10 @@ transition: 0.18s ease-in;
              
               <img src="https://www.zupimages.net/up/23/18/huoj.jpg" alt="Friends in Wheelchairs" style="margin-top: 15px; margin-right: 15px; margin-bottom: 10px; width: 43%; height: 220px; border: 0.1px solid #8a8a8ada; padding: 2px; float: left; box-shadow: 0 0 9.5px 0.4px rgba(154, 154, 154, 0.897);">
               <br>
-              Why are they often unintentionally considered to be a kind of social barometers by some people ? Because through them it may possible to quantify the level of inclusiveness based on how the society is interacting and accepting them as human-beings. 
+              Why are they often unintentionally considered to be a kind of social barometers by some people ? Because through them it may be possible to quantify the level of inclusiveness based on how the society is interacting, accepting and voicing for them as human-beings. 
               <br>
               <br>
-              Through conversations and interactions with the so-called "normal people", people living with disabilities are sometimes able to tell who is very, less or not inclusive-minded.
+              However, conversations and interactions with the so-called "normal people", are crucial for people living with disabilities to tell who is a very, less or not inclusive-minded person.
               
               <br>
               <br>
