--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         font-family: 'georgia';
         font-size: 0.72rem;
         color: gold;
-        background: rgba(32, 93, 178, 0.894);
+        background: rgba(28, 90, 177, 0.839);
     }
 
     .reader{
@@ -340,7 +340,7 @@
       justify-items: center;
       width: 100%;
       height: 1450px;
-      background: -webkit-linear-gradient(rgba(35, 110, 207, 0.495), #fff);
+      background: -webkit-linear-gradient(rgba(37, 113, 220, 0.549), #fff);
       color: rgba(109, 109, 109, 0.925);
       font-family: 'helvetica';
       font-weight: bold;
@@ -1614,11 +1614,10 @@ font-size: 19px;
           row-gap: 1rem;
           width: 89.54%;
           height: 649px;
-          background: -webkit-linear-gradient(rgba(36, 113, 220, 0.805), #fff);
-          border: 0.1px solid gold;      
-          border-top: 0.12px solid gold;  
-          border-top-left-radius: 0.45rem;
-          border-top-right-radius: 0.45rem;
+          background: -webkit-linear-gradient(rgba(37, 113, 220, 0.768), #fff);
+          border: 0.1px solid rgb(171, 189, 255);      
+          border-top-left-radius: 29rem;
+          border-top-right-radius: 29rem;
           margin-top: -0.1rem;
         }
 .VD3i{
@@ -1629,7 +1628,7 @@ font-size: 19px;
           height: 70px;
           font-family: 'helvetica';
           font-size: 2rem;
-          color: rgb(235, 239, 244);
+          color: darkblue;
           margin-top: 2.90rem;
 
 }
@@ -1643,7 +1642,7 @@ font-size: 19px;
   height: 415px;
   overflow: hidden;
   padding: 15px;  
-  border: 1.2px solid #82a7eced;
+  border: 1.2px solid #86adf4ed;
   border-radius: 0.1rem;
 }
 
