--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
       justify-items: center;
       width: 100%;
       height: 1450px;
-      background: -webkit-linear-gradient(rgba(37, 113, 220, 0.549), #fff);
+      background: -webkit-linear-gradient(rgba(37, 113, 220, 0.525), #fff);
       color: rgba(109, 109, 109, 0.925);
       font-family: 'helvetica';
       font-weight: bold;
@@ -436,7 +436,7 @@
         justify-items: center;
             width: 100%;
             height: 788px;
-            background: transparent;  
+            background: -webkit-linear-gradient(rgba(37, 113, 220, 0.297), #fff);
             padding: 10px;
             color: #000;       
           }
@@ -887,7 +887,7 @@ opacity: 0.97;
             justify-items: center;
             width: 100%;
             height: 435px;
-            background: transparent; 
+            background: -webkit-linear-gradient(rgba(37, 113, 220, 0.297), #fff);
             padding: 16px;
             color: #0073fff5;
             margin-top: 0.25rem;
@@ -1883,7 +1883,7 @@ font-size: 19px;
           cursor: pointer;
           background: #fff;  
           border-top: transparent;
-          border: 0.12rem solid rgba(106, 107, 115, 0.41);
+          border: 0.1px solid rgba(171, 189, 255, 0.916);
           margin-top: -0.6rem;
           border-bottom-left-radius: 1rem;
           border-bottom-right-radius: 1rem;
