--- a/index.html
+++ b/index.html
@@ -1616,8 +1616,8 @@ font-size: 19px;
           height: 649px;
           background: -webkit-linear-gradient(rgba(37, 113, 220, 0.768), #fff);
           border: 0.1px solid rgb(171, 189, 255);      
-          border-top-left-radius: 29rem;
-          border-top-right-radius: 29rem;
+          border-top-left-radius: 34rem;
+          border-top-right-radius: 34rem;
           margin-top: -0.1rem;
         }
 .VD3i{
@@ -1627,7 +1627,7 @@ font-size: 19px;
           width: 100%;
           height: 70px;
           font-family: 'helvetica';
-          font-size: 2rem;
+          font-size: 1.95rem;
           color: darkblue;
           margin-top: 2.90rem;
 
@@ -2644,7 +2644,7 @@ transition: 0.18s ease-in;
               <div class="VD2i">
 
                 <div class="VD3i"> 
-                  WELCOME! THIS WEBSITE IS IN PROJECT. PLEASE COME BACK!
+                  Welcome ! This Website is in project. Please Come Back !
                 </div>
 
                
