--- a/index.html
+++ b/index.html
@@ -1614,8 +1614,7 @@ font-size: 19px;
           row-gap: 1rem;
           width: 89.54%;
           height: 649px;
-          background: -webkit-linear-gradient(rgba(37, 113, 220, 0.768), #fff);
-          border: 0.1px solid rgb(171, 189, 255);      
+          background-image: linear-gradient(to right, #f83600 0%, #f9d423 100%); 
           border-top-left-radius: 34rem;
           border-top-right-radius: 34rem;
           margin-top: -0.1rem;
@@ -1642,7 +1641,7 @@ font-size: 19px;
   height: 415px;
   overflow: hidden;
   padding: 15px;  
-  border: 1.2px solid #86adf4ed;
+  border: 1.2px solid gold;
   border-radius: 0.1rem;
 }
 
@@ -1883,7 +1882,6 @@ font-size: 19px;
           cursor: pointer;
           background: #fff;  
           border-top: transparent;
-          border: 0.1px solid rgba(171, 189, 255, 0.916);
           margin-top: -0.6rem;
           border-bottom-left-radius: 1rem;
           border-bottom-right-radius: 1rem;
