--- a/index.html
+++ b/index.html
@@ -1775,6 +1775,7 @@ font-size: 19px;
           animation: auto 12s ease-in infinite;
           animation-delay: 12s;
           background: #fff;
+          color: #0747f6;
           text-align: center;
           border-bottom-left-radius: 1rem;
           border-bottom-right-radius: 1rem;
@@ -1808,6 +1809,7 @@ font-size: 19px;
           animation: auto 12s ease-in infinite;
           animation-delay: 8s;
           background: #fff;
+          color: #0747f6;
           text-align: center;
           border-bottom-left-radius: 1rem;
           border-bottom-right-radius: 1rem;
@@ -1843,6 +1845,7 @@ font-size: 19px;
           animation: auto 12s ease-in infinite;
           animation-delay: 4s;
           background: #fff;
+          color: #0747f6;
           text-align: center;
           border-bottom-left-radius: 1rem;
           border-bottom-right-radius: 1rem;
