--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         font-family: 'georgia';
         font-size: 0.72rem;
         color: gold;
-        background: rgba(28, 90, 177, 0.839);
+        background: rgba(26, 84, 165, 0.881);
     }
 
     .reader{
@@ -1641,7 +1641,7 @@ font-size: 19px;
   height: 400px;
   overflow: hidden;
   padding: 15px;  
-  border: 1.2px solid gold;
+  border: 0.1rem solid rgba(0, 0, 139, 0.452);
   border-radius: 0.1rem;
 }
 
@@ -1763,6 +1763,7 @@ font-size: 19px;
           font-family: arial;
           font-size: 18px;
           color: #4b4d51df;
+          border: 0.11rem solid rgba(0, 0, 139, 0.893);
           border-top-left-radius: 1rem;
           border-top-right-radius: 1rem;
          
@@ -2176,7 +2177,7 @@ transition: 0.18s ease-in;
     margin-top: -16px;
     margin-left: 4rem;
     cursor: pointer;
-    border: 0.12rem solid #69575ef2;
+    border: 0.12rem solid #8f737ef2;
     
    }
 
@@ -2757,7 +2758,7 @@ transition: 0.18s ease-in;
 
               <figure>
                 <img src="https://www.zupimages.net/up/22/21/di3p.jpg" alt="Drumming - BFA">
-                <figcaption style="color: #0932e7f7; margin-top: 3px; font-size: 13.36px;">Drumming is one of the beloved activities for children</figcaption>
+                <figcaption style="color: #3973de; font-size: 13.5px; margin-top: 3px;">Drumming is one of the beloved activities for children</figcaption>
                 </figure>
 
               </div>
@@ -2779,11 +2780,11 @@ transition: 0.18s ease-in;
               <div class="CIP">
               <figure>
                 <img src="https://www.zupimages.net/up/22/46/daw5.jpg" alt="Support Teaching">
-                <figcaption style="color: #0932e7f7; font-size: 13.36px; margin-top: -1px; line-height: 16.65px;">Volunteering Is Helping to Shape And Highlight Some Great Concepts Including Sharing And Giving Back Spirit. In Burkina Faso, A Disabled Person, As A Volunteer Is Teaching Maths and Computer Science in An Association</figcaption>
+                <figcaption style="color: #3973de; font-size: 13.5px; margin-top: -1px; line-height: 16.6px;">Volunteering Is Helping to Shape And Highlight Good Causes Including Sharing And Giving Back Spirit. In Burkina Faso, A Disabled Person, As A Volunteer Is Teaching Maths and Computer Science in An Association</figcaption>
                 </figure>
             </div>
             <div class="PiK" style="margin-top: 2rem; font-size: 14.5px;">
-              Sometimes disabled people are considered to be the most courageous and angelustic people with a strong character by some admirers and then are included. But they are often ridiculed, deviled, physically assaulted, villipended. Basically they are discriminated. At this point they won't be included.
+              Sometimes disabled people are considered to be the most courageous and angelustic people with a strong character by some admirers, then they get included. But sometimes they are ridiculed, deviled and unfortunately physically assaulted. Basically they are discriminated. At this point they won't be included.
             </div>
             <a href="file:///C:/Users/User/Documents/disabilitylife.html" target="_blank">
               <div class="PiKe">
@@ -2820,7 +2821,7 @@ transition: 0.18s ease-in;
                   as well as physically"
                 <br>
                 </em>
-                <em style="color: rgb(37, 66, 195); font-family: 'helvetica'; font-size: 18px;">[Stephen Hawking, English Physicist, Cosmologist and Author] 
+                <em style="color: rgb(36, 67, 204); font-family: 'helvetica'; font-size: 18px;">[Stephen Hawking, English Physicist, Cosmologist and Author] 
                 </em>
               </div>
             </a>
@@ -2906,19 +2907,19 @@ transition: 0.18s ease-in;
               <div class="DiapoPhoto">
                 <div class="T">
                 <div class="BoderTopColor1" style="opacity: 0.97; border: 0.1px solid rgba(190, 192, 201, 0.625); color: #181818c2;
-                background: #fff; padding: 6px; font-family: 'helvetica'; font-size: 16px">Celebrating Christmas at Tiki N'Yiki's Headquarter in Ziniare [Burkina Faso]</div>
+                background: #fff; padding: 6px; font-family: 'helvetica'; font-size: 16px">Celebrating Christmas with Children in Ziniare [Burkina Faso]</div>
                 <div><img src="https://www.zupimages.net/up/22/31/z42x.jpg" alt="Christmas at Tiki N'Yiki"></div>
               </div>
 
               <div class="T1">
                 <div class="BoderTopColor1" style="opacity: 0.97; border: 0.1px solid rgba(190, 192, 201, 0.625); color: #181818c2;
-                background: #fff; padding: 6px; font-family: 'helvetica'; font-size: 16px">How To Teach The Alphabet to Kids In A Classroom ? [Burkina Faso]</div>
+                background: #fff; padding: 6px; font-family: 'helvetica'; font-size: 16px">How To Introduce The Alphabet to Kids In A Classroom ? [Burkina Faso]</div>
                 <div><img src="https://www.zupimages.net/up/22/21/3bad.jpg" alt="Classes"> </div>
               </div>
 
               <div class="T2">
                 <div class="BoderTopColor1" style="opacity: 0.97; border: 0.14px solid rgba(190, 192, 201, 0.625); color: #181818c2;
-                background: #fff; padding: 6px; font-family: 'helvetica'; font-size: 16px">Teaching Kids Has Been Funny To Me. I Learned Back From Them</div>
+                background: #fff; padding: 6px; font-family: 'helvetica'; font-size: 16px">Teaching Kids Is Funny To Me. We Do Learn Back From Them</div>
                 <div><img src="https://www.zupimages.net/up/22/31/ttk3.jpg" alt="Teaching in BF"></div>
               </div>
 
