--- a/index.html
+++ b/index.html
@@ -1642,6 +1642,7 @@ font-size: 19px;
   overflow: hidden;
   padding: 15px;  
   border: 0.1rem solid rgba(0, 0, 139, 0.452);
+  box-shadow: 0 0 0.2rem 0.3px rgba(7, 7, 93, 0.803);
   border-radius: 0.1rem;
   margin-top: 1rem;
 }
@@ -2694,7 +2695,7 @@ transition: 0.18s ease-in;
               <div class="ViiDe">
 
                 <h1 style="font-size: 2rem; text-align: left; color: #027bfdea;">What it means to live with a disability ?</h1>
-            <p>Living as a disabled person is a tough way to experience perpetual challenges. Including the ability to transform a negative energy from daily discriminations into a positive, impulsive and rational one for their survival, disabled are believed to be amongst the best people who may truly experience what combativity means.
+            <p>Living as a disabled person is a tough way to experience perpetual challenges including the ability to transform a negative energy from daily discriminations into a positive, impulsive and rational one. Some disabled people are believed to truly experience what combativity means.
               <br>
               <br>
               By the fact they are able to carry up a certain dynamic of courage and determination in order to reach their focuses is impressing, inspiring and hope-making.
